[gd_scene load_steps=2 format=3 uid="uid://cn5m8yv3kxbls"]

[ext_resource type="Script" path="res://src/ui/InventoryUI.gd" id="1_inventory_ui"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_inventory_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrencyContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GoldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CurrencyContainer"]
layout_mode = 2
text = "Gold: 0"

[node name="GemsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CurrencyContainer"]
layout_mode = 2
text = "Gems: 0"

[node name="TokensLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CurrencyContainer"]
layout_mode = 2
text = "Tokens: 0"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
